@@ -1,3 +1,9 @@
+2016-11-28  Moritz Bunkus  <moritz@bunkus.org>
+
+        * Fixed an instance of undefined behavior in
+        EbmlElement::GetSemantic() due to binding a dereferenced null
+        pointer to a reference.
+
 2016-07-15  Moritz Bunkus  <moritz@bunkus.org>
 
         * Replaced the outdated address of the Free Software Foundation
